ci/test/chainsaw/assertions/externalsecret-ready.yaml
---
apiVersion: external-secrets.io/v1
kind: ExternalSecret
metadata:
  name: ($name)
  namespace: ($namespace)
status:
  (conditions[?type == 'Ready']):
  - status: 'True'
